--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-*, ::before, ::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #f1f1f1;
-    background: linear-gradient(45deg, rgb(59,50,50), rgb(22,28,29));
-    height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #f1f1f1;
+  background: linear-gradient(45deg, #3b3232, #161c1d);
+  height: 100vh;
 }
+/*# sourceMappingURL=style.css.map */
