--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -6,9 +7,152 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Merriweather', serif, Arial, Helvetica, sans-serif;
   color: #f1f1f1;
   background: linear-gradient(45deg, #3b3232, #161c1d);
   height: 100vh;
+}
+
+.title {
+  text-align: center;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-area: 1/ 1 / 2 / -1;
+}
+
+.container {
+  width: 800px;
+  height: 600px;
+  background: #9bf8f3;
+  background: linear-gradient(45deg, #9bf8f3 0%, #0742f2 100%);
+  background: -webkit-linear-gradient(45deg, #9bf8f3 0%, #0742f2 100%);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 100px 300px 100px 100px;
+  -ms-grid-columns: (100px)[8];
+      grid-template: 100px 300px 100px 100px/repeat(8, 100px);
+  margin: 100px auto 0;
+  position: relative;
+  border: 1px solid white;
+}
+
+.bloc-logo-info {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-area: 2/ 1 / 3 / -1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.bloc-logo {
+  width: 50%;
+}
+
+.bloc-logo img {
+  width: 60%;
+  height: auto;
+}
+
+.bloc-logo img {
+  width: 100%;
+  height: auto;
+}
+
+.bloc-info {
+  width: 50%;
+}
+
+.bloc-info .temps {
+  font-size: 40px;
+}
+
+.bloc-info .temps::first-letter {
+  text-transform: capitalize;
+}
+
+.bloc-info .temperature {
+  font-size: 60px;
+}
+
+.bloc-info .localisation {
+  font-size: 40px;
+  word-wrap: break-word;
+}
+
+.heure-bloc-prevision {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-area: 3 / 1 / 4 / -1;
+}
+
+.jour-prevision-bloc {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-area: 4 / 1 / 5 / -1;
+}
+
+.jour-prevision-bloc, .heure-bloc-prevision {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 100px;
+  -ms-grid-columns: (1fr)[7];
+      grid-template: 100px/repeat(7, 1fr);
+}
+
+.bloc-h, .bloc-j {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-top: 1px solid #f1f1f1;
+  font-size: 21px;
+}
+
+.bloc-h:not(:last-child), .bloc-j:not(:last-child) {
+  border-right: 1px solid #f1f1f1;
+}
+
+.bloc-h p, .bloc-j p {
+  margin: 5px;
+}
+
+/* Animation chargement */
+.overlay-icone-chargement {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #3b3232, #161c1d);
+  -webkit-transition: opacity 1.1s ease-out;
+  transition: opacity 1.1s ease-out;
+  z-index: 1000;
+}
+
+.overlay-icone-chargement img {
+  width: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.disparition {
+  opacity: 0;
 }
 /*# sourceMappingURL=style.css.map */
