--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,122 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap');
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Merriweather', serif, Arial, Helvetica, sans-serif;
     color: #f1f1f1;
-    background: linear-gradient(45deg, rgb(59,50,50), rgb(22,28,29));
+    background: linear-gradient(45deg, rgb(59, 50, 50), rgb(22, 28, 29));
     height: 100vh;
+}
+
+// Body part
+
+.title {
+    text-align: center;
+    grid-area: 1/ 1 / 2 / -1;
+}
+
+
+.container {
+    width: 800px;
+    height: 600px;
+    background: hsla(177, 87%, 79%, 1);
+    background: linear-gradient(45deg, hsla(177, 87%, 79%, 1) 0%, hsla(225, 94%, 49%, 1) 100%);
+    background: -moz-linear-gradient(45deg, hsla(177, 87%, 79%, 1) 0%, hsla(225, 94%, 49%, 1) 100%);
+    background: -webkit-linear-gradient(45deg, hsla(177, 87%, 79%, 1) 0%, hsla(225, 94%, 49%, 1) 100%);
+    display: grid;
+    grid-template: 100px 300px 100px 100px / repeat(8, 100px);
+    margin: 100px auto 0;
+    position: relative;
+    border: 1px solid white;
+}
+
+.bloc-logo-info {
+    grid-area: 2/ 1 / 3 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bloc-logo {
+    width: 50%;
+}
+
+.bloc-logo img {
+    width: 60%;
+    height: auto;
+}
+
+.bloc-logo img {
+    width: 100%;
+    height: auto;
+}
+.bloc-info {
+    width: 50%;
+}
+.bloc-info .temps {
+    font-size: 40px;
+}
+.bloc-info .temps::first-letter {
+    text-transform: capitalize;
+}
+.bloc-info .temperature {
+    font-size: 60px;
+}
+.bloc-info .localisation {
+    font-size: 40px;
+    word-wrap: break-word;
+}
+
+.heure-bloc-prevision {
+    grid-area: 3 / 1 / 4 / -1;
+}
+.jour-prevision-bloc {
+    grid-area: 4 / 1 / 5 / -1;
+}
+.jour-prevision-bloc, .heure-bloc-prevision {
+    display: grid;
+    grid-template: 100px / repeat(7, 1fr);
+}
+
+.bloc-h, .bloc-j {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-top: 1px solid #f1f1f1;
+    font-size: 21px;
+}
+
+.bloc-h:not(:last-child), .bloc-j:not(:last-child) {
+    border-right: 1px solid #f1f1f1;
+}
+
+.bloc-h p, .bloc-j p {
+    margin: 5px;
+}
+
+/* Animation chargement */
+
+.overlay-icone-chargement {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, rgb(59,50,50), rgb(22,28,29));
+    transition: opacity 1.1s ease-out;
+    z-index: 1000;
+}
+.overlay-icone-chargement img {
+    width: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.disparition {
+    opacity: 0;
 }
