--- a/style.css
+++ b/style.css
@@ -13,19 +13,13 @@ body {
   height: 100vh;
 }
 
-.title {
-  text-align: center;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-area: 1/ 1 / 2 / -1;
-}
-
 .container {
   width: 800px;
   height: 600px;
-  background: #9bf8f3;
-  background: linear-gradient(45deg, #9bf8f3 0%, #0742f2 100%);
-  background: -webkit-linear-gradient(45deg, #9bf8f3 0%, #0742f2 100%);
+  background: #ff930f;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ff930f), to(#fffa5c));
+  background: linear-gradient(180deg, #ff930f 0%, #fffa5c 100%);
+  background: -webkit-linear-gradient(180deg, #ff930f 0%, #fffa5c 100%);
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 100px 300px 100px 100px;
@@ -36,7 +30,14 @@ body {
   border: 1px solid white;
 }
 
-.bloc-logo-info {
+.container__title {
+  text-align: center;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-area: 1/ 1 / 2 / -1;
+}
+
+.bloc {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-area: 2/ 1 / 3 / -1;
@@ -51,22 +52,27 @@ body {
           align-items: center;
 }
 
-.bloc-logo {
-  width: 50%;
+.bloc__logo {
+  width: 90%;
 }
 
-.bloc-logo img {
-  width: 60%;
+.bloc__info {
+  width: 90%;
+}
+
+.bloc__logo img {
+  width: 80%;
   height: auto;
 }
 
-.bloc-logo img {
-  width: 100%;
-  height: auto;
-}
-
-.bloc-info {
-  width: 50%;
+.bloc-h, .bloc-j {
+  background: rgba(255, 255, 255, 0.15);
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .bloc-info .temps {
@@ -98,21 +104,30 @@ body {
   grid-area: 4 / 1 / 5 / -1;
 }
 
-.jour-prevision-bloc, .heure-bloc-prevision {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 100px;
-  -ms-grid-columns: (1fr)[7];
-      grid-template: 100px/repeat(7, 1fr);
-}
-
-.bloc-h, .bloc-j {
+.jour-prevision-bloc,
+.heure-bloc-prevision {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.bloc-h,
+.bloc-j {
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -120,15 +135,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border-top: 1px solid #f1f1f1;
   font-size: 21px;
 }
 
-.bloc-h:not(:last-child), .bloc-j:not(:last-child) {
-  border-right: 1px solid #f1f1f1;
-}
-
-.bloc-h p, .bloc-j p {
+.bloc-h p,
+.bloc-j p {
   margin: 5px;
 }
 
