--- a/style.scss
+++ b/style.scss
@@ -15,58 +15,66 @@ body {
 
 // Body part
 
-.title {
-    text-align: center;
-    grid-area: 1/ 1 / 2 / -1;
-}
-
-
 .container {
     width: 800px;
     height: 600px;
-    background: hsla(177, 87%, 79%, 1);
-    background: linear-gradient(45deg, hsla(177, 87%, 79%, 1) 0%, hsla(225, 94%, 49%, 1) 100%);
-    background: -moz-linear-gradient(45deg, hsla(177, 87%, 79%, 1) 0%, hsla(225, 94%, 49%, 1) 100%);
-    background: -webkit-linear-gradient(45deg, hsla(177, 87%, 79%, 1) 0%, hsla(225, 94%, 49%, 1) 100%);
+    background: hsla(33, 100%, 53%, 1);
+    background: linear-gradient(180deg, hsla(33, 100%, 53%, 1) 0%, hsla(58, 100%, 68%, 1) 100%);
+    background: -moz-linear-gradient(180deg, hsla(33, 100%, 53%, 1) 0%, hsla(58, 100%, 68%, 1) 100%);
+    background: -webkit-linear-gradient(180deg, hsla(33, 100%, 53%, 1) 0%, hsla(58, 100%, 68%, 1) 100%);
     display: grid;
     grid-template: 100px 300px 100px 100px / repeat(8, 100px);
     margin: 100px auto 0;
     position: relative;
     border: 1px solid white;
+
+    &__title {
+        text-align: center;
+        grid-area: 1/ 1 / 2 / -1;
+    }
 }
 
-.bloc-logo-info {
+.bloc {
     grid-area: 2/ 1 / 3 / -1;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &__logo {
+        width: 90%;
+    }
+
+    &__info {
+        width: 90%;
+    }
+
+    &__logo img {
+        width: 80%;
+        height: auto;
+    }
 }
 
-.bloc-logo {
-    width: 50%;
+.bloc-h , .bloc-j{
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 5px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
-.bloc-logo img {
-    width: 60%;
-    height: auto;
-}
-
-.bloc-logo img {
-    width: 100%;
-    height: auto;
-}
-.bloc-info {
-    width: 50%;
-}
 .bloc-info .temps {
     font-size: 40px;
 }
+
 .bloc-info .temps::first-letter {
     text-transform: capitalize;
 }
+
 .bloc-info .temperature {
     font-size: 60px;
 }
+
 .bloc-info .localisation {
     font-size: 40px;
     word-wrap: break-word;
@@ -75,28 +83,32 @@ body {
 .heure-bloc-prevision {
     grid-area: 3 / 1 / 4 / -1;
 }
+
 .jour-prevision-bloc {
     grid-area: 4 / 1 / 5 / -1;
 }
-.jour-prevision-bloc, .heure-bloc-prevision {
-    display: grid;
-    grid-template: 100px / repeat(7, 1fr);
+
+.jour-prevision-bloc,
+.heure-bloc-prevision {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.bloc-h, .bloc-j {
+.bloc-h,
+.bloc-j {
+    width: 20%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    border-top: 1px solid #f1f1f1;
     font-size: 21px;
 }
 
-.bloc-h:not(:last-child), .bloc-j:not(:last-child) {
-    border-right: 1px solid #f1f1f1;
-}
 
-.bloc-h p, .bloc-j p {
+.bloc-h p,
+.bloc-j p {
     margin: 5px;
 }
 
@@ -106,10 +118,11 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, rgb(59,50,50), rgb(22,28,29));
+    background: linear-gradient(45deg, rgb(59, 50, 50), rgb(22, 28, 29));
     transition: opacity 1.1s ease-out;
     z-index: 1000;
 }
+
 .overlay-icone-chargement img {
     width: 150px;
     position: absolute;
@@ -117,6 +130,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .disparition {
     opacity: 0;
 }
