--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
 .container {
   width: 800px;
   height: 600px;
-  background: #ff930f;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ff930f), to(#fffa5c));
-  background: linear-gradient(180deg, #ff930f 0%, #fffa5c 100%);
-  background: -webkit-linear-gradient(180deg, #ff930f 0%, #fffa5c 100%);
+  background: #2f58e9;
+  background: -webkit-gradient(linear, left top, left bottom, from(#2f58e9), to(#93d1fb));
+  background: linear-gradient(180deg, #2f58e9 0%, #93d1fb 100%);
+  background: -webkit-linear-gradient(180deg, #2f58e9 0%, #93d1fb 100%);
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 100px 300px 100px 100px;
@@ -58,6 +58,9 @@ body {
 
 .bloc__info {
   width: 90%;
+  font-size: 1.4em;
+  word-wrap: break-word;
+  line-height: 2;
 }
 
 .bloc__logo img {
@@ -65,8 +68,8 @@ body {
   height: auto;
 }
 
-.bloc-h, .bloc-j {
-  background: rgba(255, 255, 255, 0.15);
+.bloc-h,
+.bloc-j {
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
@@ -75,27 +78,15 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.bloc-info .temps {
-  font-size: 40px;
-}
-
 .bloc-info .temps::first-letter {
   text-transform: capitalize;
-}
-
-.bloc-info .temperature {
-  font-size: 60px;
-}
-
-.bloc-info .localisation {
-  font-size: 40px;
-  word-wrap: break-word;
 }
 
 .heure-bloc-prevision {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-area: 3 / 1 / 4 / -1;
+  text-align: center;
 }
 
 .jour-prevision-bloc {
@@ -144,17 +135,17 @@ body {
 }
 
 /* Animation chargement */
-.overlay-icone-chargement {
+.loader {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #3b3232, #161c1d);
+  background: linear-gradient(45deg, #19266e, #186a79);
   -webkit-transition: opacity 1.1s ease-out;
   transition: opacity 1.1s ease-out;
   z-index: 1000;
 }
 
-.overlay-icone-chargement img {
+.loader img {
   width: 150px;
   position: absolute;
   top: 50%;
@@ -165,5 +156,25 @@ body {
 
 .disparition {
   opacity: 0;
+}
+
+@-webkit-keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+@keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
