--- a/style.scss
+++ b/style.scss
@@ -62,7 +62,7 @@ body {
 .bloc-h,
 .bloc-j {
     //background: rgba(255, 255, 255, 0.15);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.048);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 5px;
